--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.14.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "@stream-io/node-sdk": "^0.4.21",
+    "@stream-io/video-react-sdk": "^1.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.23.0",
     "lucide-react": "^0.487.0",
     "monaco-editor": "^0.52.2",
     "next": "15.2.4",
