--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "streamcode",
+  "name": "codeProctor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.14.1",
+    "@clerk/nextjs": "^6.14.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@stream-io/node-sdk": "^0.4.21",
     "@stream-io/video-react-sdk": "^1.14.0",
@@ -21,6 +21,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "svix": "^1.63.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
