--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.14.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.1.4",
     "@stream-io/node-sdk": "^0.4.21",
     "@stream-io/video-react-sdk": "^1.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.487.0",
     "monaco-editor": "^0.52.2",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-resizable-panels": "^2.1.7",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
