--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@stream-io/node-sdk": "^0.4.21",
     "@stream-io/video-react-sdk": "^1.14.0",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +38,7 @@
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
