--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "codeProctor",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -29,7 +30,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.6.5",
     "lucide-react": "^0.487.0",
     "monaco-editor": "^0.52.2",
@@ -41,6 +44,8 @@
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
@@ -48,12 +53,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/express": "^5.0.3",
+    "@types/node": "^20.19.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "nodemon": "^3.1.10",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
