--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@stream-io/node-sdk": "^0.4.21",
     "@stream-io/video-react-sdk": "^1.14.0",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.23.0",
@@ -37,6 +38,7 @@
     "lucide-react": "^0.487.0",
     "monaco-editor": "^0.52.2",
     "next": "15.2.4",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.6",
     "react-dom": "^19.0.0",
