--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@stream-io/node-sdk": "^0.4.21",
+    "@stream-io/node-sdk": "^0.4.25",
     "@stream-io/video-react-sdk": "^1.14.0",
     "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +35,7 @@
     "date-fns": "^3.6.0",
     "express": "^5.1.0",
     "framer-motion": "^12.6.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "monaco-editor": "^0.52.2",
     "next": "15.2.4",
