--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
+    "resend": "^4.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "svix": "^1.63.1",
