--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@stream-io/node-sdk": "^0.4.25",
     "@stream-io/video-react-sdk": "^1.14.0",
+    "@tanstack/react-virtual": "^3.13.12",
     "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
