--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
